Added login and register pages.

--- a/Melodify Frontend/user/index.html
+++ b/Melodify Frontend/user/index.html
@@ -18,7 +18,7 @@
     <script src="https://kit.fontawesome.com/5c9473fc67.js" crossorigin="anonymous"></script>
 </head>
 <body>
-<div id="main">
+<main>
     <div id="sidebar">
         <div id="logo">
             <h1><span class="fa fa-compact-disc"></span>Melodify</h1>
@@ -424,7 +424,7 @@
         </div>
 
     </div>
-</div>
+</main>
 <div id="player">
     <div id="track_info">
         <div class="item">
