Created redirection tweaks

--- a/Melodify Frontend/user/login.html
+++ b/Melodify Frontend/user/login.html
@@ -10,6 +10,7 @@
     <script src="../js/theme.js"></script>
     <script src="https://kit.fontawesome.com/5c9473fc67.js" crossorigin="anonymous"></script>
     <script src="../js/login.js"></script>
+    <script src="../js/jwt.js"></script>
 </head>
 <body>
 <main>
