Fixed links and search

--- a/Melodify Frontend/user/login.html
+++ b/Melodify Frontend/user/login.html
@@ -11,6 +11,11 @@
     <script src="https://kit.fontawesome.com/5c9473fc67.js" crossorigin="anonymous"></script>
     <script src="../js/login.js"></script>
     <script src="../js/jwt.js"></script>
+    <script>
+        if(getToken()!== null) {
+            document.location.href = "./index.html";
+        }
+    </script>
 </head>
 <body>
 <main>
