--- a/Melodify Frontend/user/playlist.html
+++ b/Melodify Frontend/user/playlist.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="../style/index.css">
     <link rel="stylesheet" href="../style/style.css">
     <link rel="stylesheet" href="../style/album-view.css">
-    <link rel="stylesheet" href="../style/search_view.css">
+    <link rel="stylesheet" href="../style/search.css">
     <link rel="stylesheet" href="../style/controls.css">
 
     <script src="../js/theme.js"></script>
@@ -27,8 +27,8 @@
             <h1><span class="fa fa-compact-disc"></span>Melodify</h1>
         </div>
         <div id="quick_actions">
-            <button><span class="fa fa-search"></span>Search</button>
-            <button><span class="fa fa-house"></span>Home</button>
+            <button onclick="navigate('./search.html')"><span class="fa fa-search"></span>Search</button>
+            <button onclick="navigate('./home.htmls')"><span class="fa fa-house"></span>Home</button>
         </div>
         <div id="library">
             <div id="library_actions">
