Fixed links and search

--- a/Melodify Frontend/user/search.html
+++ b/Melodify Frontend/user/search.html
@@ -50,9 +50,9 @@
                     <input type="search" placeholder="Search here">
                     <button onclick="performSearch()"><span class="fa fa-search"></span></button>
                     <div id="search_filters">
-                        <button class="artist-filter active"><span class="fa fa-check"></span>Artists</button>
-                        <button class="album-filter active"><span class="fa fa-check"></span>Albums</button>
-                        <button class="song-filter active"><span class="fa fa-check"></span>Songs</button>
+                        <button onclick="clickArtistButton()" class="artist-filter active"><span class="fa fa-check"></span>Artists</button>
+                        <button onclick="clickAlbumButton()" class="album-filter active"><span class="fa fa-check"></span>Albums</button>
+                        <button onclick="clickSongButton()" class="song-filter active"><span class="fa fa-check"></span>Songs</button>
                     </div>
                 </div>
             </div>
